Cleared unused resources and improved menu buttons. Pictures on grid have now a better onTouch effect

--- a/res/layout/dialog_info.xml
+++ b/res/layout/dialog_info.xml
@@ -5,67 +5,6 @@
     android:layout_gravity="center_vertical"
     android:weightSum="1" >
 
-    <!--
-    <LinearLayout
-        android:id="@+id/hints_tabs"
-        android:layout_width="wrap_content"
-        android:layout_height="64dp"
-        android:orientation="horizontal"
-        android:paddingTop="1dp"
-        android:paddingLeft="1dp"
-        android:paddingRight="1dp"
-        android:gravity="center_horizontal" >
-
-
-        <ImageButton
-            android:id="@+id/tab_hat"
-            android:layout_width="128dp"
-            android:layout_height="match_parent"
-            android:scaleType="fitCenter"
-            android:background="@drawable/dialog_tab_selector"
-            android:padding="8dp"
-            android:src="@drawable/ic_hint_hat" />
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/black_white_gradient_vertical" />
-
-        <ImageButton
-            android:id="@+id/tab_map"
-            android:layout_width="128dp"
-            android:layout_height="match_parent"
-            android:scaleType="fitCenter"
-            android:background="@drawable/dialog_tab_selector"
-            android:padding="8dp"
-            android:src="@drawable/ic_hint_map" />
-    </LinearLayout>
-
-    <View
-        android:id="@+id/hints_tabs_divider"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:background="#88ffffff"
-        android:layout_below="@+id/hints_tabs"
-        android:layout_alignLeft="@+id/hints_tabs"
-        android:layout_alignRight="@+id/hints_tabs" />
-
-    <RelativeLayout
-        android:id="@+id/hints_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="150dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="15dp"
-        android:orientation="vertical"
-        android:layout_below="@+id/hints_tabs_divider"
-        android:layout_alignLeft="@+id/hints_tabs"
-        android:layout_alignRight="@+id/hints_tabs" />
-    -->
-
     <RelativeLayout
         android:layout_width="0dip"
         android:layout_height="wrap_content"
@@ -90,11 +29,14 @@
             android:gravity="center_vertical"
             android:layout_marginTop="15dp"
             android:layout_below="@+id/infoTitle"
-            android:text="Some letters"
+            android:text="..."
             android:textColor="#666"
             android:layout_centerHorizontal="true"
             android:textSize="14sp" 
-            android:paddingBottom="10dp"/>
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp" />
+        
     </RelativeLayout>
 
 </LinearLayout>
