--- a/res/drawable/bg_section_rounded.xml
+++ b/res/drawable/bg_section_rounded.xml
@@ -1,17 +1,17 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 	<item>
     	<shape >
-		    <solid android:color="#30FFFFFF" />
+		    <solid android:color="#00FFFFFF" />
 		    <stroke android:width="1dp" android:color="#DDFFFFFF" />
 		    <corners android:radius="6dp" />
 		</shape>
 	</item>
 	<item >
-    	<bitmap android:gravity="left|center_vertical" android:tileMode="disabled" android:src="@drawable/test" />
+    	<bitmap android:gravity="center" android:tileMode="disabled" android:src="@drawable/test" />
 	</item>
 	<item>
     	<shape >
-		    <solid android:color="#c4FFFFFF" />
+		    <solid android:color="#bbFFFFFF" />
 		    <corners android:radius="6dp" />
 		</shape>
 	</item>
