--- a/res/layout/dialog_level_success.xml
+++ b/res/layout/dialog_level_success.xml
@@ -31,14 +31,16 @@
             android:text="@string/level_success_title"
             android:textColor="#00B219"
             android:textSize="30sp"
+            android:paddingRight="45dp"
+            android:paddingLeft="45dp"
             android:textStyle="bold" />
 
         <View
             android:id="@+id/level_success_title_divider"
             android:layout_width="wrap_content"
             android:layout_height="1dp"
-            android:layout_alignLeft="@+id/level_success_buttons_layout"
-            android:layout_alignRight="@+id/level_success_buttons_layout"
+            android:layout_alignLeft="@+id/level_success_title"
+            android:layout_alignRight="@+id/level_success_title"
             android:layout_below="@+id/level_success_title"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="15dp"
@@ -81,6 +83,7 @@
             android:layout_marginTop="2dp"
             android:gravity="center"
             android:orientation="horizontal"
+            android:layout_centerHorizontal="true"
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -117,7 +120,8 @@
                 android:text="Close"
                 android:textColor="#888"
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/level_success_next_button"
