--- a/res/layout/fragment_grid_levels.xml
+++ b/res/layout/fragment_grid_levels.xml
@@ -8,12 +8,7 @@
         android:layout_width="match_parent"
     	android:layout_height="match_parent" 
     	android:columnWidth="140dp"
-    	android:numColumns="auto_fit" />
-    
-    <include layout="@layout/item_grid_levels"
-        android:id="@+id/transitionLevel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
+    	android:numColumns="auto_fit"
+    	android:listSelector="#00000000" />
     
 </RelativeLayout>
