--- a/res/layout/fragment_menu.xml
+++ b/res/layout/fragment_menu.xml
@@ -20,19 +20,12 @@
     	android:src="@drawable/title"
     	android:visibility="gone" />
     
-    <ProgressBar 
-        android:id="@+id/dataLoadingProgress"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        style="?android:attr/progressBarStyleHorizontal" 
-        android:layout_centerInParent="true" />
-    
     <LinearLayout
         android:id="@+id/menuButtonsContainer"
     	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:layout_centerVertical="true"
-    	android:paddingBottom="25dp"
+    	android:paddingBottom="40dp"
     	android:orientation="vertical"
     	android:gravity="center_horizontal"
     	android:visibility="gone" >
@@ -46,7 +39,8 @@
             android:shadowColor="#000"
             android:shadowRadius="2"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="20sp"
+            android:alpha="0.92"
             android:background="@drawable/blue_button_selector" />
         <!-- 
         <Button 
@@ -57,10 +51,11 @@
             android:textColor="#FFF"
             android:shadowColor="#000"
             android:shadowRadius="2"
-            android:textSize="18sp"
+            android:textSize="13sp"
             android:textStyle="bold"
-            android:background="@drawable/magenta_button_selector" />
- -->
+            android:alpha="0.92"
+            android:background="@drawable/blue_button_selector" />
+  -->
         <Button 
             android:id="@+id/buttonStats"
             android:layout_width="wrap_content"
@@ -69,8 +64,9 @@
             android:textColor="#FFF"
             android:shadowColor="#000"
             android:shadowRadius="2"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textStyle="bold"
+            android:alpha="0.92"
             android:background="@drawable/orange_button_selector" />
         
         <Button 
@@ -81,8 +77,9 @@
             android:textColor="#FFF"
             android:shadowColor="#000"
             android:shadowRadius="2"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textStyle="bold"
+            android:alpha="0.92"
             android:background="@drawable/green_button_selector" />
         
     </LinearLayout>
