--- a/res/layout/item_achievement_stat.xml
+++ b/res/layout/item_achievement_stat.xml
@@ -18,8 +18,7 @@
             android:layout_height="52dp"
             android:layout_alignParentLeft="true"
             android:contentDescription="@null"
-            android:gravity="center"
-            android:src="@drawable/ic_star" />
+            android:gravity="center" />
 
         <LinearLayout
             android:layout_width="fill_parent"
