--- a/res/layout/item_simple_stat.xml
+++ b/res/layout/item_simple_stat.xml
@@ -15,8 +15,7 @@
             android:layout_height="52dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:contentDescription="@null"
-            android:src="@drawable/ic_star" />
+            android:contentDescription="@null" />
 
         <TextView
             android:id="@+id/StatLabel"
