- Back button now appear correctly when the last level is finished, regardless the position inside the section. - Clicking next button on the success dialog will bring to the next OPENED level - Entering a section will bring to the first OPENED level. Or the first closed one if the section is already complete

--- a/res/layout/dialog_level_success.xml
+++ b/res/layout/dialog_level_success.xml
@@ -95,6 +95,8 @@
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
                 android:background="@drawable/button_level_success_dialog_selector"
+                android:drawablePadding="8dp"
+                android:drawableLeft="@drawable/ic_section_back"
                 android:gravity="center"
                 android:paddingBottom="10dp"
                 android:paddingLeft="15dp"
