--- a/res/layout/ab_view_level.xml
+++ b/res/layout/ab_view_level.xml
@@ -61,15 +61,14 @@
             android:layout_height="40dp"
             android:background="@null"
             android:scaleType="fitCenter"
-            android:src="@drawable/next"
-            android:rotation="180" />
+            android:src="@drawable/previous" />
 
         <ImageButton
             android:id="@+id/next_level_button"
             android:layout_width="60dp"
             android:layout_height="40dp"
             android:scaleType="fitCenter"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="10dp"
             android:background="@null"
             android:src="@drawable/next" />
     </LinearLayout>
@@ -77,10 +76,12 @@
     <ImageButton
         android:id="@+id/grid_pictures_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="46dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:layout_marginRight="5dp"
         android:background="@null"
+        android:scaleType="fitCenter"
         android:src="@drawable/grid_pictures_small" />
 
 </merge>
