--- a/res/layout/fragment_level.xml
+++ b/res/layout/fragment_level.xml
@@ -8,13 +8,15 @@
 
         <LinearLayout
             android:id="@+id/levelPictureBigLayout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="25dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="20dp"
             android:gravity="center" >
 
-            <ImageView
+            <com.quizz.places.widgets.AntiAliasPicture
                 android:id="@+id/levelPictureBig"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -23,11 +25,12 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:adjustViewBounds="true"
+                android:antialias="true"
                 android:background="@drawable/photo_border_white"
-                android:paddingBottom="14dp"
-                android:paddingLeft="12dp"
-                android:paddingRight="15dp"
-                android:paddingTop="11dp"
+                android:paddingBottom="13dp"
+                android:paddingLeft="11dp"
+                android:paddingRight="14dp"
+                android:paddingTop="10dp"
                 android:scaleType="centerInside" />
         </LinearLayout>
 
@@ -35,24 +38,27 @@
             android:id="@+id/levelInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_margin="8dp"
+            android:layout_alignLeft="@+id/levelPictureBigLayout"
+            android:layout_alignTop="@+id/levelPictureBigLayout"
+            android:layout_marginLeft="-8dp"
+            android:layout_marginTop="-10dp"
             android:adjustViewBounds="true"
             android:background="#00000000"
-            android:maxHeight="56dp"
             android:maxWidth="40dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/hints_button_selector" />
+            android:src="@drawable/ic_hints" />
 
         <TextView
             android:id="@+id/levelName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/levelOpenedlayout"
             android:layout_below="@+id/levelPictureBigLayout"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="2dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="12dp"
+            android:layout_toRightOf="@+id/levelNbHints"
             android:gravity="center_horizontal"
             android:shadowColor="#cc000000"
             android:shadowDx="-1"
@@ -61,13 +67,12 @@
             android:textScaleX="1.05"
             android:textSize="32sp"
             android:textStyle="bold" />
-
         <RelativeLayout
             android:id="@+id/levelOpenedlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/levelName"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="22dp" >
 
@@ -76,9 +81,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/levelCheckButton"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignTop="@+id/levelCheckButton"
+                android:layout_marginLeft="10dp"
                 android:layout_toLeftOf="@+id/levelCheckButton"
                 android:gravity="center_vertical" >
 
@@ -138,32 +143,34 @@
             android:id="@+id/levelHintLetters"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/levelName"
             android:layout_alignParentLeft="true"
-            android:layout_margin="8dp"
+            android:layout_alignTop="@+id/levelName"
             android:adjustViewBounds="true"
             android:background="#00000000"
-            android:maxHeight="56dp"
             android:maxWidth="40dp"
             android:scaleType="fitCenter"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
             android:src="@drawable/letter_writer" />
+        
 
         <TextView
             android:id="@+id/levelNbHints"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-			android:layout_alignRight="@+id/levelHintLetters"
-			android:layout_alignTop="@+id/levelHintLetters"
+            android:layout_alignRight="@+id/levelHintLetters"
+            android:layout_alignTop="@+id/levelHintLetters"
+            android:layout_marginRight="-4dp"
+            android:layout_marginTop="-5dp"
             android:background="@drawable/hints_shape"
-            android:text="12"
-            android:textStyle="bold"
-            android:textColor="#eee"
+            android:includeFontPadding="false"
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
-            android:layout_marginTop="-5dp"
-            android:layout_marginRight="-4dp"
-            android:includeFontPadding="false"
-            android:textSize="10sp" />
+            android:text="12"
+            android:textColor="#eee"
+            android:textSize="10sp"
+            android:textStyle="bold" />
+        
     </RelativeLayout>
 
 </ScrollView>
