--- a/res/layout/dialog_info.xml
+++ b/res/layout/dialog_info.xml
@@ -1,42 +1,36 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_gravity="center"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:layout_gravity="center_vertical"
-    android:weightSum="1" >
+    android:layout_marginLeft="25dp"
+    android:layout_marginRight="25dp"
+    android:background="@drawable/dialog_border_white" >
 
-    <RelativeLayout
-        android:layout_width="0dip"
+    <TextView
+        android:id="@+id/infoTitle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.7"
-        android:background="@drawable/dialog_border_white" >
+        android:text="Cultural Tip"
+        android:layout_marginTop="10dp"
+        android:textColor="#666"
+        android:textSize="18sp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/infoTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cultural Tip"
-            android:layout_marginTop="10dp"
-            android:textColor="#666"
-            android:textSize="18sp"
-            android:layout_centerHorizontal="true"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/infoContent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_marginTop="15dp"
-            android:layout_below="@+id/infoTitle"
-            android:text="..."
-            android:textColor="#666"
-            android:layout_centerHorizontal="true"
-            android:textSize="14sp" 
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp" />
-        
-    </RelativeLayout>
-
-</LinearLayout>
+    <TextView
+        android:id="@+id/infoContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/infoTitle"
+        android:text="..."
+        android:gravity="center"
+        android:textColor="#666"
+        android:layout_centerHorizontal="true"
+        android:textSize="14sp" 
+        android:padding="15dp" />
+    
+</RelativeLayout>
