--- a/res/layout/item_list_sections.xml
+++ b/res/layout/item_list_sections.xml
@@ -68,7 +68,7 @@
 	        android:id="@+id/sectionUnlockLabel"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="Find 53 pictures to unlock"
+	        android:text=""
 	        android:textColor="#666"
 	        android:textSize="18sp"
 	        android:layout_marginTop="5dp"
