--- a/res/layout/fragment_stats.xml
+++ b/res/layout/fragment_stats.xml
@@ -13,10 +13,14 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:text="@string/stats_title_label"
-	        android:layout_marginLeft="15dp"
+	        android:layout_marginLeft="12dp"
 	        android:layout_marginTop="15dp"
-	        android:textSize="18dp"
+	        android:textSize="18sp"
 	        android:textStyle="bold"
+	        android:shadowColor="#FFF"
+	        android:shadowDx="-1"
+	        android:shadowDy="1"
+	        android:shadowRadius="1"
 	        android:textColor="#444" />
         
         <RelativeLayout
@@ -24,7 +28,10 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
             android:background="@drawable/bg_rounded"
-	        android:layout_margin="10dp"
+	        android:layout_marginTop="8dp"
+	        android:layout_marginLeft="10dp"
+	        android:layout_marginRight="10dp"
+	        android:layout_marginBottom="10dp"
 	        android:padding="10dp" >
 	
 	        <ImageView
@@ -40,9 +47,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="2dp"
                 android:gravity="center_horizontal"
-                android:text="Niveaux débloqués"
                 android:layout_toRightOf="@+id/BadgeIcon"
                 android:textColor="#606060"
                 android:layout_marginBottom="20dp"
@@ -71,10 +77,10 @@
                 android:layout_alignLeft="@+id/BadgeProgress"
                 android:src="@drawable/bg_section_progress_small"
                 android:textSize="12sp"
+                android:textStyle="bold"
                 android:gravity="right"
                 android:layout_marginRight="5dp"
-                android:layout_marginBottom="2dp"
-                android:text="56 / 86"
+                android:layout_marginBottom="5dp"
                 android:alpha="0.9" />
 	            
 	    </RelativeLayout>
